--- a/style.css
+++ b/style.css
@@ -1,1 +1,10 @@
+body{
+margin-left: 20px;
+margin-right: 20px;
+margin-top: 0px;
+font-family: Helvetica, sans-serif;
 
+}
+h1{
+  color: 	#556B2F;
+}
